kubefiles/rest/cert-namespace.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "cert-manager",
    "labels": {
      "name": "cert-manager"
    }
  }
}
