kubefiles/rest/nginx-namespace.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "ingress-nginx",
    "labels": {
      "name": "ingress-nginx"
    }
  }
}
