kubefiles/rest/rest_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-app
spec:
  selector:
    matchLabels:
      run: rest-app
  replicas: 1
  template:
    metadata:
      labels:
        run: rest-app
    spec:
      containers:
        - name: rest-app
          image: eu.gcr.io/stocker-300519/rest:latest
---
apiVersion: v1
kind: Service
metadata:
  name: rest-service
  labels:
    run: rest-app
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8000
  selector:
    run: rest-app
  type: LoadBalancer
